fixing line spacing

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -1,6 +1,6 @@
 // TYPOGRAPHY ================================================
 @doc-font-size: 18pt;
-@doc-line-height: 14pt;
+@doc-line-height: 24pt;
 @base-font: 'Crimson Text', serif;
 @heading-font: 'Telex', sans-serif;
 @code-font: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
